<resources>
    <string name="app_name">WanAndroid</string>


    <string name="title_collect">收藏列表</string>
    <string name="title_coin_details">积分详情</string>

    <integer name="anim_sile_duration">150</integer>

    <string name="navigation_title_home">首页</string>
    <string name="navigation_title_system">体系</string>
    <string name="navigation_title_project">项目</string>
    <string name="navigation_title_mine">我的</string>

    <string name="mine_sign_in_and_sign_up">登录和注册</string>
    <string name="mine_level">等级: %d</string>
    <string name="mine_coin_count">积分: %d</string>
    <string name="mine_rank">积分排名: %d</string>
    <string name="mine_collect_article">收藏文章</string>
    <string name="mine_coin_info">积分详情</string>

    <string name="article_item_top">置顶</string>
    <string name="article_item_fresh">新</string>
    <string name="article_item_no_author">佚名</string>

    <string name="login_welcome">welcome %s</string>
    <string name="login_sign_in">登录</string>
    <string name="login_sign_up">注册</string>
    <string name="login_hint_username">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_username_digits">0123456789qwertyuiopasdfghjklzxcvbnm</string>

    <string name="load_state_error"> Σ( ￣□￣||)&#62;\n%s</string>
    <string name="load_state_network_error">网络加载失败，点击重试</string>

</resources>