<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mine.login.RegisterActivity">

    <include
        android:id="@+id/app_bar_layout"
        layout="@layout/include_toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:srcCompat="@mipmap/ic_launcher" />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:autofillHints="@string/login_hint_username"
        android:background="@null"
        android:digits="@string/login_username_digits"
        android:hint="@string/login_hint_username"
        android:inputType="textVisiblePassword"
        android:maxLength="16"
        android:maxLines="1"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_line_top" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:autofillHints="@string/login_hint_password"
        android:background="@null"
        android:hint="@string/login_hint_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_line_middle" />

    <Button
        android:id="@+id/login_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login_sign_up"
        app:layout_constraintEnd_toStartOf="@id/login_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_line_bottom" />

    <Button
        android:id="@+id/login_sign_in"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/login_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_sign_up"
        app:layout_constraintTop_toTopOf="@id/login_sign_up" />

    <ProgressBar
        android:id="@+id/login_loading"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_sign_up"
        tools:visibility="visible" />

    <View
        android:id="@+id/login_line_top"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray200"
        app:layout_constraintBottom_toTopOf="@id/login_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_icon" />

    <View
        android:id="@+id/login_line_middle"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:background="@color/gray200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_username" />

    <View
        android:id="@+id/login_line_bottom"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/gray200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_password" />

</androidx.constraintlayout.widget.ConstraintLayout>