<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/include_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/mine_center"
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:background="@android:color/white"
                android:foreground="?android:attr/selectableItemBackground"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/mine_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:tint="@color/gray500"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_mine_default_avatar_24dp" />

                <TextView
                    android:id="@+id/mine_nickname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toTopOf="@id/mine_level"
                    app:layout_constraintStart_toEndOf="@id/mine_avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="wazing"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/mine_level"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@id/mine_nickname"
                    app:layout_constraintTop_toBottomOf="@id/mine_nickname"
                    tools:text="等级: 6"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/mine_coin_count"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mine_level"
                    app:layout_constraintTop_toBottomOf="@id/mine_nickname"
                    tools:text="积分: 666"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/mine_rank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mine_coin_count"
                    app:layout_constraintTop_toBottomOf="@id/mine_nickname"
                    tools:text="积分排名: 1000"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/mine_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/mine_sign_in_and_sign_up"
                    android:textColor="@color/gray800"
                    android:textSize="18sp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/mine_avatar"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/go_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@null"
                    android:src="@drawable/ic_arrow_right_24dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/mine_collect_article"
                style="@style/MineTextViewItemStyle"
                android:drawableStart="@drawable/ic_mine_coin_24dp"
                android:drawableEnd="@drawable/ic_arrow_right_24dp"
                android:text="@string/mine_collect_article" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="16dp"
                android:background="@color/gray200" />

            <TextView
                android:id="@+id/mine_coin_info"
                style="@style/MineTextViewItemStyle"
                android:drawableStart="@drawable/ic_mine_coin_24dp"
                android:drawableEnd="@drawable/ic_arrow_right_24dp"
                android:text="@string/mine_coin_info" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/mine_night_mode"
                style="@style/MineTextViewItemStyle"
                android:drawableStart="@drawable/ic_mine_coin_24dp"
                android:drawableEnd="@drawable/ic_arrow_right_24dp"
                android:text="夜间模式" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
